# 2022-gubkin-rsu-broadcast-ndi-tally

./: .gitignore  LICENSE  README.md
NDITallyStatus/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  tally_echo.cpp
SDK_NDIlib_Examples/CLI/: CMakeLists.txt
SDK_NDIlib_Examples/CLI/NDIlib_Send_Video_Advanced/: NDIlib_Send_Video_Advanced.cpp
SDK_NDIlib_Examples/CLI/NDIlib_Tally_Echo/: NDIlib_Tally_Echo.cpp
SDK_NDIlib_Examples/GUI/NDITallyStatus/: echo_class.cpp  echo_class.h  eoic_thread.cpp  eoic_thread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
SDK_NDIlib_Examples/NDIlib_Send_Video_Advanced/: CMakeLists.txt  NDIlib_Send_Video_Advanced.cpp
SDK_NDIlib_Examples/NDIlib_Tally_Echo/: CMakeLists.txt  NDIlib_Tally_Echo.cpp
deploy/: README.txt  run.cmd
